samples/_failures_safe/1761365161_f5130a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_446c29a8.c: In function ‘main’:
./samples/SAFE/__tmp_446c29a8.c:146:48: error: ‘MAX’ undeclared (first use in this function)
  146 |     b.cols = read_int("  Columns (1-10): ", 1, MAX
      |                                                ^~~
./samples/SAFE/__tmp_446c29a8.c:146:48: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_446c29a8.c:146:51: error: expected ‘)’ at end of input
  146 |     b.cols = read_int("  Columns (1-10): ", 1, MAX
      |                      ~                            ^
      |                                                   )
./samples/SAFE/__tmp_446c29a8.c:146:5: error: expected declaration or statement at end of input
  146 |     b.cols = read_int("  Columns (1-10): ", 1, MAX
      |     ^
